--- a/FAQMacOSX.mediawiki
+++ b/FAQMacOSX.mediawiki
@@ -6,7 +6,7 @@ SDL supports Mac OS X 10.4 and newer, using either Xcode or the classic UNIX sty
 For the latest information see http://hg.libsdl.org/SDL/file/default/README.Platforms
 
 == What is the difference between the Xcode and the UNIX style build system? ==
-The SDL-devel package contains the SDL libraries in the form of so-called Frame<code></code>Works. That is perfectly fine as long as you want to develop using Xcode. However, applications which use a configure script almost always require SDL to be installed UNIX style.
+The SDL-devel package contains the SDL libraries in the form of a Framework. That is perfectly fine as long as you want to develop using Xcode. However, applications which use a configure script almost always require SDL to be installed UNIX style.
 
 When installed as a Framework, all SDL files (the library and the header files) are aggregated into a .framework bundle, and installed together into /Library/Frameworks/ or ~/Library/Frameworks/. There, Xcode can find it. But packages which want to use SDL but employ a UNIX style build system are usually not able to find SDL there (there are a few exceptions where people hand modified their configure scripts to allow using Frameworks on OSX, but those are rare).
 
@@ -18,17 +18,18 @@ Either you can compile and install it from source (via the usual ./configure && 
 Note that as long as you static link the release builds of your application, it doesn't really matter which way you installed SDL -- for example, even if you installed it via Fink, if you static link SDL, your users do not have to install Fink.
 
 
-
-== I can't get OpenGL to work. ==
+== How do I build an OpenGL application? ==
 On Mac OS X, you access the OpenGL headers like so:
 
-<!-- include <OpenGL/gl.h> #include <OpenGL/glu.h> #include <OpenGL/glext.h> -->
+```
+#include <OpenGL/gl.h> #include <OpenGL/glext.h>
+```
 
-The header file "SDL_opengl.h" accounts for the first two headers shown here on all supported SDL systems.
+The header file "SDL_opengl.h" includes these headers on all supported SDL systems.
 
-If you are are using Xcode, add OpenGL.framework to your project. On the command line, add:
+If you are using Xcode, add OpenGL.framework to your project. On the command line, add:
 
--framework OpenGL
+<code>-framework OpenGL</code>
 
 to the GCC or LD arguments in your Makefile
 
