added code reference

--- a/SDL_StartTextInput.mediawiki
+++ b/SDL_StartTextInput.mediawiki
@@ -11,6 +11,9 @@ Use this function to start accepting Unicode text input events.
 void SDL_StartTextInput(void)
 ```
 
+== Code References ==
+Declared at [http://hg.libsdl.org/SDL/file/default/include/SDL_keyboard.h#l143 include/SDL_keyboard.h line 143]
+
 == Code Examples ==
 ```c++
 You can add your code example here
